# 2024-06-gondi

./: .gitignore  .gitmodules  4naly3er-report.md  Dockerfile  README-sponsor.md  README.md  compiler_config.json  foundry.toml  msl.json  out_of_scope.txt  remappings.txt  scope.txt  slither.config.json  slither.txt
deploy/: deploy.py  deployed_local.yml  deployed_main.yml  pyproject.toml
deploy/florida_contracts/: contracts.py  deployers.py  setup_contracts.py  utils.py
deploy/resources/: WrappedPunksBase.hex  config_goerli.yml  config_local.yml  config_prod.yml
script/: .env  config_local.yml  deploy.py  deploy_leverage.py
src/interfaces/: IAuctionLoanLiquidator.sol  ILiquidationDistributor.sol  ILiquidationHandler.sol  ILoanLiquidator.sol  INFTFlashAction.sol  IOldERC721.sol  IUserVault.sol
src/lib/: AddressManager.sol  AuctionLoanLiquidator.sol  AuctionWithBuyoutLoanLiquidator.sol  InputChecker.sol  LiquidationDistributor.sol  LiquidationHandler.sol  Multicall.sol  UserVault.sol
test/: AddressManager.t.sol  AuctionLoanLiquidator.t.sol  AuctionWithBuyoutLoanLiquidator.t.sol  LiquidationDistributor.t.sol  MultiSourceGas.t.sol  TestNFTFlashAction.sol  UserVault.t.sol
test/callbacks/: PurchaseBundler.t.sol
test/loans/: MultiSourceCommons.sol  MultiSourceLoan.t.sol  MultiSourceLoanTestExtra.t.sol  TestLoanSetup.sol
test/pools/: AaveUsdcBaseInterestAllocator.t.sol  FeeManager.t.sol  LidoEthBaseInterestAllocator.t.sol  Oracle.t.sol  OraclePoolOfferHandler.t.sol  Pool.t.sol  PoolOfferHandler.t.sol  WithdrawalQueue.t.sol
test/utils/: MockedAave.sol  (+7 more)
(+40 files in other folders)
